--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -12,13 +12,13 @@ $palette: (
     darker: darken($bg, 10%),
     lighter: lighten($bg, 10%),
   ),
-  fg: #f7f7f7,
+  fg: #fff,
   fg-bold: #fff,
   fg-light: #f7f7f7,
   border: #e0e0e0,
   accent: (
     bg: $accent,
-    fg: #fff,
+    fg: #374244,
     darker: darken($accent, 10%),
     lighter: lighten($accent, 10%),
   ),
