--- a/scss/partials/_footer.scss
+++ b/scss/partials/_footer.scss
@@ -1,15 +1,12 @@
 #footer {
   .slogan {
-    background: palette(accent, bg);
-    color: palette(accent, fg);
-    text-shadow: 0px 0px 0.75em rgba($color: #000000, $alpha: 0.75);
+    @include accent_colour();
     text-align: center;
     font-size: 2rem;
     line-height: 1.35em;
     padding: 3rem 0;
     a {
       white-space: nowrap;
-      color: palette(accent, fg);
     }
   }
   .footer {
@@ -27,7 +24,7 @@
       }
       &:hover {
         svg {
-          fill: palette(accent, fg);
+          fill: palette(fg);
         }
       }
     }
